Compact binary DB - more fields